# nmuidi

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: BuildAndRelease.yml  build.yml
src/: lib.rs  main.rs  nmuidi.rs
