[package]
name = "nmuidi"
version = "0.1.0"
edition = "2021"
description = "Parallelizes deleting directories which can significantly speed up deleting large deeply nested directories with a large number of files on Windows"
readme = "README.md"
homepage = "https://github.com/Dillonb/nmuidi"
documentation = "https://github.com/Dillonb/nmuidi"
repository = "https://github.com/Dillonb/nmuidi"
license-file = "LICENSE"
keywords = ["windows", "delete", "parallel"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
num_cpus = "1.16.0"
itertools = "0.11.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
